Added new classes AddActivity. The news feed is written to the database, in MainActivity displays the news feed

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,18 +2,26 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.focusstartrssreader">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name=".RssFeedApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        android:usesCleartextTraffic="true"
-        android:name=".RssFeedApp">
-        <activity android:name=".MainActivity">
+        android:usesCleartextTraffic="true">
+        <activity
+            android:name=".activities.AddActivity"
+            android:label="@string/add_activity"
+            android:parentActivityName=".activities.MainActivity"/>
+        <activity
+            android:name=".activities.SettingsActivity"
+            android:label="@string/settings_activity"
+            android:parentActivityName=".activities.MainActivity"/>
+        <activity android:name=".activities.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -23,9 +31,7 @@
 
         <service
             android:name=".service.FetchFeedService"
-            android:exported="false">
-        </service>
-
+            android:exported="false" />
     </application>
 
 </manifest>
