--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,12 +32,17 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'com.android.support:design:28.0.0'
+
     def room_version = "1.1.1"
     implementation "android.arch.persistence.room:runtime:$room_version"
     annotationProcessor "android.arch.persistence.room:compiler:$room_version"
     implementation 'com.android.support:cardview-v7:28.0.0'
+
     def lifecycle_version = "1.1.1"
     implementation "android.arch.lifecycle:extensions:$lifecycle_version"
     annotationProcessor "android.arch.lifecycle:compiler:$lifecycle_version"
+    implementation 'com.android.support:preference-v7:28.0.0'
 
+    def work_version = "1.0.1"
+    implementation "android.arch.work:work-runtime:$work_version"
 }
